kubernetes/apps/convert-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: convert
  labels:
    app.kubernetes.io/name: convert
    convert.tier: backend
spec:
  ports:
  - name: http
    port: 5002
    targetPort: 80
  selector:
    app.kubernetes.io/name: convert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convert
  labels:
    app.kubernetes.io/name: convert
    convert.tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: convert
  template:
    metadata:
      labels:
        app.kubernetes.io/name: convert
        convert.tier: backend
    spec:
      containers:
      - name: convert        
        image: convert-service:dev
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - mountPath: "/data"
            name: nfs-volume
      restartPolicy: Always
      volumes:
        - name: nfs-volume 
          persistentVolumeClaim:
            claimName: nfs-pvc
