kubernetes/apps/upload-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload
  labels:
    app.kubernetes.io/name: upload
    upload.tier: backend
spec:
  ports:
  - name: http
    port: 5001
    targetPort: 80
  selector:
    app.kubernetes.io/name: upload
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload
  labels:
    app.kubernetes.io/name: upload
    upload.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: upload
  template:
    metadata:
      labels:
        app.kubernetes.io/name: upload
        upload.tier: backend
    spec:
      containers:
      - name: upload        
        image: upload-service:dev
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - mountPath: "/data"
            name: nfs-volume
      restartPolicy: Always
      volumes:
        - name: nfs-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upload
  labels:
    app.kubernetes.io/name: upload
    upload.tier: backend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-login-guard@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /api/files
            pathType: Prefix
            backend:
              service: 
                name: upload
                port:
                  name: http
