kubernetes/apps/webclient-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: webclient
  name: webclient
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 80
  selector:
    io.kompose.service: webclient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: webclient
  name: webclient
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webclient
  template:
    metadata:
      labels:
        io.kompose.service: webclient
    spec:
      containers:
      - image: webclient:dev
        name: webclient
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webclient
  labels:
    io.kompose.service: webclient
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: webclient
                port:
                  name: http
